# httlib-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
h2/: Cargo.toml
hpack/: Cargo.toml  README.md
hpack/fixtures/: README.md
hpack/src/: decode.rs  encode.rs  lib.rs
hpack/src/decoder/: error.rs  mod.rs  primitives.rs
hpack/src/encoder/: error.rs  input.rs  mod.rs  primitives.rs
hpack/src/table/: dynamic.rs  iter.rs  mod.rs  static.rs
hpack/tests/: decoder.rs  http2jp.rs  specs.rs
huffman/: Cargo.toml  README.md
huffman/examples/: encode.rs  flatten.rs  parse.rs
huffman/src/: builder.rs  decoder.rs  encoder.rs  flattener.rs  lib.rs  parser.rs
huffman/src/data/: decoder1.rs  decoder2.rs  decoder3.rs  decoder4.rs  decoder5.rs  encoder.rs  mod.rs
huffman/src/decode/: error.rs  mod.rs  reader.rs  table1.rs  table2.rs  table3.rs  table4.rs  table5.rs
huffman/src/decoder/: error.rs  mod.rs  reader.rs  speed.rs  table1.rs  table2.rs  table3.rs  table4.rs  table5.rs
huffman/src/encode/: error.rs  mod.rs  table.rs
huffman/src/encoder/: error.rs  mod.rs  table.rs
huffman/src/flatten/: mod.rs
huffman/src/flattener/: mod.rs
huffman/src/parse/: mod.rs
huffman/src/parser/: mod.rs
protos/: Cargo.toml  README.md
protos/src/: lib.rs  typ.rs
protos/src/decoder/: error.rs  from_lit.rs  lit.rs  mod.rs  primitives.rs
protos/src/encoder/: error.rs  lit.rs  mod.rs  primitives.rs
